appId: host.exp.Exponent
---
- launchApp
- assertVisible: 'Bienvenido'
- tapOn: 'Entrar al sistema'
- assertVisible: 'Inicio'
